Apply suggestions from code review
Co-authored-by: Andrew Longosz <alongosz@users.noreply.github.com>

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -32,8 +32,7 @@ parameters:
 services:
     # EventSubscriber
 
-    support_tools.promote_platform.response_subscriber:
-        class: EzSystems\EzSupportToolsBundle\EventSubscriber\AddXPoweredByHeader
+    EzSystems\EzSupportToolsBundle\EventSubscriber\AddXPoweredByHeader:
         arguments: ["%ezplatform_support_tools.system_info.powered_by.name%"]
         tags:
             - { name: kernel.event_subscriber }
