--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -13,7 +13,7 @@ parameters:
     support_tools.system_info.collector.php.ezc.class: EzSystems\EzSupportToolsBundle\SystemInfo\Collector\EzcPhpSystemInfoCollector
     support_tools.system_info.collector.symfony.kernel.config.class: EzSystems\EzSupportToolsBundle\SystemInfo\Collector\ConfigurationSymfonyKernelSystemInfoCollector
     support_tools.system_info.output_format.json.class: EzSystems\EzSupportToolsBundle\SystemInfo\OutputFormat\JsonOutputFormat
-    ezplatform_support_tools.system_info.powered_by.name: ''
+    ezplatform.system_info.powered_by.name: ''
     support_tools.ez_url_list:
         contact: "https://ez.no/About-eZ/Contact-Us"
         license: "https://ez.no/About-our-Software/Licenses-and-agreements"
@@ -33,7 +33,7 @@ services:
     # EventSubscriber
 
     EzSystems\EzSupportToolsBundle\EventSubscriber\AddXPoweredByHeader:
-        arguments: ["%ezplatform_support_tools.system_info.powered_by.name%"]
+        arguments: ["%ezplatform.system_info.powered_by.name%"]
         tags:
             - { name: kernel.event_subscriber }
 
