--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": "^7.3",
-        "ezsystems/ezplatform-kernel": "^1.2@dev",
-        "ezsystems/ezplatform-core": "^2.1@dev",
-        "ezsystems/ezplatform-admin-ui": "^2.2@dev",
+        "ezsystems/ezplatform-kernel": "^1.2",
+        "ezsystems/ezplatform-core": "^2.1",
+        "ezsystems/ezplatform-admin-ui": "^2.2",
         "ocramius/proxy-manager": "^2.2",
         "symfony/proxy-manager-bridge": "^5.0",
         "zetacomponents/system-information": "^1.1.1",
@@ -22,7 +22,7 @@
     "require-dev": {
         "ezsystems/ezplatform-code-style": "^0.1",
         "friendsofphp/php-cs-fixer": "^2.16",
-        "ezsystems/doctrine-dbal-schema": "^1.0@dev",
+        "ezsystems/doctrine-dbal-schema": "^1.0",
         "phpunit/phpunit": "^8.2",
         "matthiasnoback/symfony-dependency-injection-test": "^4.0"
     },
